fixed remove nav onclick on mobile

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -109,7 +109,7 @@
     right: 5%;
     top: 50%;
     transform: translate(-5%, -50%);
-    z-index: 2;
+    z-index: 3;
   }
 
   .nav-links {
@@ -127,6 +127,7 @@
     clip-path: circle(2000px at 90% -20%);
     -webkit-clip-path: circle(2000px at 90% -20%);
     pointer-events: all;
+    z-index: 2;
   }
 
   .hamburger.open .line-1 {
